28 Jan 2018
update: tvmaze and imdb api to limit cast to first 30
update: tvmaze and imdb api to only cache the data, not the html
add: tvmaze table with all tvmaze ids for quicker lookup
add: tvmaze cleanup to get new tvmaze id's
update: README to show tvmaze insert/update
update: sql dumps to allow update
update: tvmaze api to include episode info
update: fanart api to include tv 

27 Jan 2018
remove: check for imdb dir during install

26 Jan 2018
fix: polls
remove: thumbsup, torrent rating is sufficient
update: set overlay height correctly

25 Jan 2018
add: fanart api banner, poster, background
fix: validator.php
update: staff change user class to allow UC_MAX to set any user to any class

24 Jan 2018
fix: left margin on details poster
fix: incorrect array being passed to get_reputation
add: ability to use a simple, encrypted image proxy for hotlinked images
update: blackjack better appearance for mobile

23 Jan 2018
add: isbn field to edit.php
update: fix get correct isbn 10/13
update: minified js/css files
update: add anonymizer_url to imdb cast and trailer links
update: update categories
update: apis will set poster to api poster, if poster unset, without page refresh
update: book uniformity
update: tvmaze uniformity
update: details.php youtube display highest quality video available
update: imdb info
remove: unused beep.mp3 and beep.ogg
fix: incorrect var name for newsrss enable/disable
replace: imdb class with imdbphp class via composer
update: resetpw to use token auth

22 Jan 2018
update: comment.php

21 Jan 2018
update: trivia questions
fix: undefined vars in staffpanel.php
remove: log queries from staff panel
fix: anonymous username in popups
remove: log queries
update: adminer.php 4.4.0
update: check if vaiable is set before counting
update: missing expire time in site_config
update: details.php
merge: userstatus_ and user_status_ caches
update: snatched_staff.php remove duplicated text